<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/image_view_offer_pic"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/image_view_profile_pic"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/image_view_post_picture"
        android:padding="0dp"
        tools:srcCompat="@tools:sample/backgrounds/scenic[12]" />

    <ImageView
        android:id="@+id/image_view_profile_pic"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_view_profile_picture"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_toEndOf="@+id/image_view_profile_pic"
        android:layout_toRightOf="@+id/image_view_profile_pic"
        android:text="@string/text_view_title"
        android:textColorLink="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_view_datentime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_title"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/image_view_profile_pic"
        android:layout_toRightOf="@+id/image_view_profile_pic"
        android:text="@string/text_view_datentime"
        android:textColorLink="@color/cardview_dark_background"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="403dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_offer_pic"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/text_view_description" />

    <!--<TextView-->
        <!--android:id="@+id/text_View_ratings"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/text_view_description"-->

        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_marginEnd="2dp"-->
        <!--android:layout_marginRight="2dp"-->
        <!--android:text="Rating : " />-->

    <Button
        android:id="@+id/details"

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/text_view_description"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:text="Make Swap Offer" />



</RelativeLayout>